# learning-ml

./: minst.ipynb  polynomial.ipynb  pyproject.toml  tools.py
